--- a/core3/model-impl/trunk/performance/pom.xml
+++ b/core3/model-impl/trunk/performance/pom.xml
@@ -63,6 +63,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
+			<artifactId>model-api</artifactId>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
 			<artifactId>integration-test-support</artifactId>
 			<version>3.0.0-alpha4-SNAPSHOT</version>
 			<scope>provided</scope>
