Added improved output for debugging.
git-svn-id: http://chianti.ucsd.edu/svn@24517 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsd/ruschein/profiler/test/pom.xml
+++ b/csplugins/trunk/ucsd/ruschein/profiler/test/pom.xml
@@ -64,6 +64,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>model-api</artifactId>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.ops4j.pax.exam</groupId>
 			<artifactId>pax-exam</artifactId>
 			<version>${pax.exam.version}</version>
