--- a/core3/test-support/trunk/pom.xml
+++ b/core3/test-support/trunk/pom.xml
@@ -52,7 +52,7 @@
 	    <groupId>junit</groupId>
 	    <artifactId>junit</artifactId>
 	    <version>${junit.version}</version>
-	    <scope>test</scope>
+	    <scope>provided</scope>
 	  </dependency>
 	  <dependency>
 	    <groupId>org.cytoscape</groupId>
