--- a/core3/table-browser-impl/trunk/pom.xml
+++ b/core3/table-browser-impl/trunk/pom.xml
@@ -135,7 +135,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>equations-api</artifactId>
-			<version>3.0.0-alpha1</version>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
