--- a/core3/webservice-impl/trunk/pom.xml
+++ b/core3/webservice-impl/trunk/pom.xml
@@ -121,7 +121,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>webservice-api</artifactId>
-			<version>3.0.0-alpha1</version>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
