Performance-testing related changes.
git-svn-id: http://chianti.ucsd.edu/svn@24624 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/model-impl/trunk/performance/pom.xml
+++ b/core3/model-impl/trunk/performance/pom.xml
@@ -45,6 +45,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<redirectTestOutputToFile>true</redirectTestOutputToFile>
+					<argLine>-Xms512m -Xmx8000m</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -59,12 +60,6 @@
 			<groupId>org.cytoscape</groupId>
 			<artifactId>model-impl</artifactId>
 			<version>${version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.cytoscape</groupId>
-			<artifactId>model-api</artifactId>
-			<version>3.0.0-alpha3-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
