Added a SavePolicy enum to CyProperty.
git-svn-id: http://chianti.ucsd.edu/svn@24632 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/plugin-api/trunk/pom.xml
+++ b/core3/plugin-api/trunk/pom.xml
@@ -185,7 +185,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>property-api</artifactId>
-			<version>3.0.0-alpha3</version>
+			<version>3.0.0-alpha4-SNAPSHOT</version>
 		</dependency>
 
 		<!-- 
