--- a/core3/work-swing-api/trunk/pom.xml
+++ b/core3/work-swing-api/trunk/pom.xml
@@ -139,7 +139,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>property-api</artifactId>
-			<version>3.0.0-alpha1</version>
+			<version>3.0.0-alpha4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
