--- a/core3/filter-impl/trunk/pom.xml
+++ b/core3/filter-impl/trunk/pom.xml
@@ -54,7 +54,7 @@
         <dependency>
         	<groupId>org.cytoscape</groupId>
         	<artifactId>session-api</artifactId>
-        	<version>3.0.0-alpha2</version>
+        	<version>3.0.0-alpha3-SNAPSHOT</version>
         	<scope>compile</scope>
         </dependency>
         <dependency>
@@ -88,7 +88,7 @@
         <dependency>
         	<groupId>org.cytoscape</groupId>
         	<artifactId>swing-application-api</artifactId>
-        	<version>3.0.0-alpha1</version>
+        	<version>3.0.0-alpha2-SNAPSHOT</version>
         </dependency>
         <dependency>
 			<groupId>org.cytoscape</groupId>
