--- a/core3/linkout-impl/trunk/pom.xml
+++ b/core3/linkout-impl/trunk/pom.xml
@@ -98,6 +98,11 @@
 			<artifactId>service-util</artifactId>
 			<version>3.0.0-alpha1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 	</dependencies>
 
 </project>
