--- a/core3/vizmap-api/trunk/pom.xml
+++ b/core3/vizmap-api/trunk/pom.xml
@@ -138,7 +138,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>presentation-api</artifactId>
-			<version>3.0.0-alpha2</version>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
