--- a/core3/layout-cytoscape-impl/trunk/pom.xml
+++ b/core3/layout-cytoscape-impl/trunk/pom.xml
@@ -86,17 +86,17 @@
 		 <dependency>
 		 	<groupId>org.cytoscape</groupId>
 			<artifactId>viewmodel-api</artifactId>
-			<version>3.0.0-alpha3</version>
+			<version>3.0.0-alpha4-SNAPSHOT</version>
 		 </dependency>
 		 <dependency>
 		 	<groupId>org.cytoscape</groupId>
 			<artifactId>layout-api</artifactId>
-			<version>3.0.0-alpha1</version>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 		 </dependency>
 		 <dependency>
 		 	<groupId>org.cytoscape</groupId>
 			<artifactId>presentation-api</artifactId>
-			<version>3.0.0-alpha1</version>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
 		 </dependency>
 		 <dependency>
 		 	<groupId>cytoscape-temp</groupId>
