--- a/core3/layout-jgraph-impl/trunk/pom.xml
+++ b/core3/layout-jgraph-impl/trunk/pom.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
-  <parent>
-    <groupId>org.cytoscape</groupId>
-    <artifactId>parent</artifactId>
-    <version>3.0.0-alpha6-SNAPSHOT</version>
-  </parent>
+	<parent>
+		<groupId>org.cytoscape</groupId>
+		<artifactId>parent</artifactId>
+		<version>3.0.0-alpha6-SNAPSHOT</version>
+	</parent>
 
-  <properties>
-    <bundle.symbolicName>org.cytoscape.layout-jgraph-impl</bundle.symbolicName>
-    <bundle.namespace>csplugins.layout</bundle.namespace>
-  </properties>
+	<properties>
+		<bundle.symbolicName>org.cytoscape.layout-jgraph-impl</bundle.symbolicName>
+		<bundle.namespace>csplugins.layout</bundle.namespace>
+	</properties>
 
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.cytoscape</groupId>
-  <artifactId>layout-jgraph-impl</artifactId>
-  <version>1.0-SNAPSHOT</version>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.cytoscape</groupId>
+	<artifactId>layout-jgraph-impl</artifactId>
+	<version>1.0-SNAPSHOT</version>
 
-  <name>${bundle.symbolicName} [${bundle.namespace}]</name>
+	<name>${bundle.symbolicName} [${bundle.namespace}]</name>
 
-  <packaging>bundle</packaging>
+	<packaging>bundle</packaging>
 
 
 	<build>
@@ -28,21 +30,17 @@
 				<groupId>org.ops4j</groupId>
 				<artifactId>maven-pax-plugin</artifactId>
 				<version>${maven-pax-plugin.version}</version>
-				<!--
-					| enable improved OSGi compilation support for the bundle
-					life-cycle. | to switch back to the standard bundle life-cycle,
-					move this setting | down to the maven-bundle-plugin section
-				-->
+				<!-- | enable improved OSGi compilation support for the bundle life-cycle. 
+					| to switch back to the standard bundle life-cycle, move this setting | down 
+					to the maven-bundle-plugin section -->
 				<extensions>true</extensions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
 				<version>${maven-bundle-plugin.version}</version>
-				<!--
-					| the following instructions build a simple set of public/private
-					classes into an OSGi bundle
-				-->
+				<!-- | the following instructions build a simple set of public/private 
+					classes into an OSGi bundle -->
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
@@ -55,47 +53,27 @@
 		</plugins>
 	</build>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.cytoscape</groupId>
-      <artifactId>model-api</artifactId>
-      <version>3.0.0-alpha3-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.cytoscape</groupId>
-      <artifactId>viewmodel-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.cytoscape</groupId>
-      <artifactId>layout-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.cytoscape</groupId>
-      <artifactId>presentation-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.cytoscape</groupId>
-      <artifactId>work-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>cytoscape-temp</groupId>
-      <artifactId>org.jgraph.jgraph</artifactId>
-      <version>5.10.0.2</version>
-    </dependency>
-    <dependency>
-      <groupId>cytoscape-temp</groupId>
-      <artifactId>org.jgraph.layouts</artifactId>
-      <version>5.10.0.2</version>
-    </dependency>
-    <dependency>
-      <groupId>cytoscape-temp</groupId>
-      <artifactId>org.jgraph.jgraphpad</artifactId>
-      <version>5.10.0.2</version>
-    </dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>layout-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>org.jgraph.jgraph</artifactId>
+			<version>5.10.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>org.jgraph.layouts</artifactId>
+			<version>5.10.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>org.jgraph.jgraphpad</artifactId>
+			<version>5.10.0.2</version>
+		</dependency>
+	</dependencies>
 
 </project>
