--- a/core3/cpath2-impl/trunk/pom.xml
+++ b/core3/cpath2-impl/trunk/pom.xml
@@ -60,12 +60,29 @@
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.3</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>stax-api</artifactId>
+			<version>1.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>sjsxp</artifactId>
+			<version>1.0.1</version>
+		</dependency>
+		
         <dependency>
             <groupId>org.jdom</groupId>
             <artifactId>jdom</artifactId>
             <version>1.1</version>
         </dependency>
-        
+	            
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
