--- a/core3/cpath2-impl/trunk/pom.xml
+++ b/core3/cpath2-impl/trunk/pom.xml
@@ -65,6 +65,11 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.3</version>
 		</dependency>
+		<dependency>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>collections-generic</artifactId>
+			<version>4.01</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>cytoscape-temp</groupId>
