--- a/core3/biopax-impl/trunk/pom.xml
+++ b/core3/biopax-impl/trunk/pom.xml
@@ -8,23 +8,17 @@
 		<version>3.0.0-alpha3</version>
 	</parent>
 	<properties>
-		<bundle.symbolicName>org.cytoscape.cpath2-impl</bundle.symbolicName>
-		<bundle.namespace>org.cytoscape.cpath2</bundle.namespace>
+		<bundle.symbolicName>org.cytoscape.biopax-impl</bundle.symbolicName>
+		<bundle.namespace>org.cytoscape.biopax</bundle.namespace>
 	</properties>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
-	<artifactId>cpath2-impl</artifactId>
+	<artifactId>biopax-impl</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<name>${bundle.symbolicName}
 		[${bundle.namespace}]</name>
 	<packaging>bundle</packaging>
 	<dependencies>
-
-        <dependency>
-            <groupId>org.cytoscape</groupId>
-            <artifactId>model-api</artifactId>
-            <version>3.0.0-alpha3-SNAPSHOT</version>
-        </dependency>
         <dependency>
             <groupId>org.cytoscape</groupId>
             <artifactId>io-api</artifactId>
@@ -32,14 +26,24 @@
         </dependency>
         <dependency>
             <groupId>org.cytoscape</groupId>
-            <artifactId>webservice-api</artifactId>
+            <artifactId>model-api</artifactId>
+            <version>3.0.0-alpha3-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.cytoscape</groupId>
+            <artifactId>work-api</artifactId>
+            <version>3.0.0-alpha3-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.cytoscape</groupId>
+            <artifactId>core-task-api</artifactId>
             <version>3.0.0-alpha2-SNAPSHOT</version>
         </dependency>
-		<dependency>
-			<groupId>cytoscape-temp</groupId>
-			<artifactId>commons-httpclient</artifactId>
-			<version>3.1</version>
-		</dependency>
+        <dependency>
+        	<groupId>org.cytoscape</groupId>
+        	<artifactId>swing-application-api</artifactId>
+        	<version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
         	<groupId>org.cytoscape</groupId>
         	<artifactId>viewmodel-api</artifactId>
@@ -48,37 +52,47 @@
         </dependency>
         <dependency>
         	<groupId>org.cytoscape</groupId>
-        	<artifactId>layout-api</artifactId>
-        	<version>3.0.0-alpha2-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-        	<groupId>org.cytoscape</groupId>
-        	<artifactId>presentation-api</artifactId>
-        	<version>3.0.0-alpha2-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-        	<groupId>org.cytoscape</groupId>
         	<artifactId>swing-util</artifactId>
         	<version>3.0.0-alpha2-SNAPSHOT</version>
         </dependency>
+		
         <dependency>
-        	<groupId>org.cytoscape</groupId>
-        	<artifactId>swing-application-api</artifactId>
-        	<version>1.0-SNAPSHOT</version>
-        </dependency>
-
+	        <groupId>cytoscape-temp</groupId>
+	        <artifactId>paxtools-core</artifactId>
+	        <version>1.0</version>
+	    </dependency>
+        <dependency>
+	        <groupId>cytoscape-temp</groupId>
+	        <artifactId>paxtools-simple-io</artifactId>
+	        <version>1.0</version>
+	    </dependency>
 		<dependency>
-			<groupId>org.cytoscape</groupId>
-			<artifactId>biopax-impl</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>collections-generic</artifactId>
+			<version>4.01</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>stax-api</artifactId>
+			<version>1.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>sjsxp</artifactId>
+			<version>1.0.1</version>
+		</dependency>
         <dependency>
             <groupId>org.jdom</groupId>
             <artifactId>jdom</artifactId>
             <version>1.1</version>
         </dependency>
-		
+	    
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -93,12 +107,25 @@
 			<scope>test</scope>
 		</dependency>
 		-->
+		<!--
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>1.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>org.cytoscape</groupId>
+        	<artifactId>session-api</artifactId>
+        	<version>3.0.0-alpha2-SNAPSHOT</version>
+        	<scope>compile</scope>
+        </dependency>
+        <dependency>
+        	<groupId>org.cytoscape</groupId>
+        	<artifactId>layout-api</artifactId>
+        	<version>3.0.0-alpha2-SNAPSHOT</version>
+        </dependency>
+        -->
 	</dependencies>
 	
 	<repositories>
@@ -117,44 +144,6 @@
 	
 	<build>
 		<plugins>
-			<plugin>
-			    <groupId>org.jvnet.jaxb2.maven2</groupId>
-			    <artifactId>maven-jaxb2-plugin</artifactId>
-			    <executions>
-			        <execution>
-			            <id>SearchResponse</id>
-			            <goals>
-			                <goal>generate</goal>
-			            </goals>
-			            <configuration>
-			                <schemaDirectory>src/main/resources/xsd</schemaDirectory>
-			                <schemaIncludes>
-			                    <include>SearchResponse.xsd</include>
-			                </schemaIncludes>
-			                <generatePackage>org.cytoscape.cpath2.internal.schemas.search_response</generatePackage>
-			                <verbose>true</verbose>
-			                <removeOldOutput>false</removeOldOutput>
-			                <forceRegenerate>true</forceRegenerate>
-			            </configuration>
-			        </execution>
-			        <execution>
-			            <id>SummaryResponse</id>
-			            <goals>
-			                <goal>generate</goal>
-			            </goals>
-			            <configuration>
-			                <schemaDirectory>src/main/resources/xsd</schemaDirectory>
-			                <schemaIncludes>
-			                    <include>SummaryResponse.xsd</include>
-			                </schemaIncludes>
-			                <generatePackage>org.cytoscape.cpath2.internal.schemas.summary_response</generatePackage>
-			                <verbose>true</verbose>
-			                <removeOldOutput>false</removeOldOutput>
-			                <forceRegenerate>true</forceRegenerate>
-			            </configuration>
-			        </execution>
-			    </executions>
-			</plugin>
 			<plugin>
 				<groupId>org.ops4j</groupId>
 				<artifactId>maven-pax-plugin</artifactId>
