--- a/csplugins/trunk/ucsf/scooter/nodeCharts/pom.xml
+++ b/csplugins/trunk/ucsf/scooter/nodeCharts/pom.xml
@@ -86,7 +86,7 @@
     <dependency>
       <groupId>cytoscape</groupId>
       <artifactId>application</artifactId>
-      <version>2.8.0</version>
+      <version>2.8.1-beta2-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
