Continuous and DiscreteRange interfaces are converted to concrete, public classes.
git-svn-id: http://chianti.ucsd.edu/svn@24687 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/viewmodel-impl/trunk/pom.xml
+++ b/core3/viewmodel-impl/trunk/pom.xml
@@ -76,7 +76,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>viewmodel-api</artifactId>
-			<version>3.0.0-alpha3</version>
+			<version>3.0.0-alpha4-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -119,7 +119,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>viewmodel-api</artifactId>
-			<version>3.0.0-alpha3</version>
+			<version>3.0.0-alpha4-SNAPSHOT</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
