--- a/core3/manual-layout-impl/trunk/pom.xml
+++ b/core3/manual-layout-impl/trunk/pom.xml
@@ -61,7 +61,7 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>viewmodel-api</artifactId>
-      <version>3.0.0-alpha2</version>
+      <version>3.0.0-alpha4-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
