--- a/core3/work-swing-impl/trunk/pom.xml
+++ b/core3/work-swing-impl/trunk/pom.xml
@@ -111,7 +111,7 @@
  		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>viewmodel-api</artifactId>
-			<version>3.0.0-alpha2</version>
+			<version>3.0.0-alpha4-SNAPSHOT</version>
  			<scope>provided</scope>
  		</dependency>
  		<dependency>
