--- a/core3/wrappers/trunk/org.swinglabs.swingx/pom.xml
+++ b/core3/wrappers/trunk/org.swinglabs.swingx/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>parent</artifactId>
 		<groupId>org.cytoscape</groupId>
-		<version>1.0-SNAPSHOT</version>
+		<version>3.0.0-alpha6-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -39,35 +39,27 @@
 			<plugin>
 				<groupId>org.ops4j</groupId>
 				<artifactId>maven-pax-plugin</artifactId>
-				<version>1.4</version>
-				<!--
-					| enable improved OSGi compilation support for the bundle
-					life-cycle. | to switch back to the standard bundle life-cycle,
-					move this setting | down to the maven-bundle-plugin section
-				-->
+				<version>${maven-pax-plugin.version}</version>
+				<!-- | enable improved OSGi compilation support for the bundle life-cycle. 
+					| to switch back to the standard bundle life-cycle, move this setting | down 
+					to the maven-bundle-plugin section -->
 				<extensions>true</extensions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
 				<version>${maven-bundle-plugin.version}</version>
-				<!--
-					| the following instructions are optimized for wrapping third-party
-					libraries as OSGi bundles
-				-->
+				<!-- | the following instructions are optimized for wrapping third-party 
+					libraries as OSGi bundles -->
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
 						<Bundle-Version>${wrapped.version}</Bundle-Version>
-						<!--
-							| export wrapped contents: don't use Export-Package:* as this
-							bundles everything on the classpath
-						-->
+						<!-- | export wrapped contents: don't use Export-Package:* as this 
+							bundles everything on the classpath -->
 						<_exportcontents>*</_exportcontents>
 						<Private-Package>!*</Private-Package>
-						<!--
-							| each module can override these defaults in their osgi.bnd file
-						-->
+						<!-- | each module can override these defaults in their osgi.bnd file -->
 						<_include>-osgi.bnd</_include>
 					</instructions>
 				</configuration>
