--- a/core3/plugin-impl/trunk/pom.xml
+++ b/core3/plugin-impl/trunk/pom.xml
@@ -168,6 +168,29 @@
 			<version>3.0.0-alpha1</version>
 	</dependency>
     
+	<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>equations-api</artifactId>
+			<version>3.0.0-alpha1</version>
+	</dependency>
+
+	<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>vizmap-gui-api</artifactId>
+			<version>3.0.0-alpha1</version>
+	</dependency>
+
+	<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>webservice-api</artifactId>
+			<version>3.0.0-alpha1</version>
+	</dependency>
+
+	<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>dnd-api</artifactId>
+			<version>3.0.0-alpha1</version>
+	</dependency>
 
     <dependency>
 		<groupId>org.cytoscape</groupId>
