--- a/core3/biopax-impl/trunk/pom.xml
+++ b/core3/biopax-impl/trunk/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.cytoscape</groupId>
 		<artifactId>parent</artifactId>
-		<version>3.0.0-alpha3</version>
+		<version>3.0.0-alpha6-SNAPSHOT</version>
 	</parent>
 	<properties>
 		<bundle.symbolicName>org.cytoscape.biopax-impl</bundle.symbolicName>
@@ -15,8 +15,7 @@
 	<groupId>org.cytoscape</groupId>
 	<artifactId>biopax-impl</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<name>${bundle.symbolicName}
-		[${bundle.namespace}]</name>
+	<name>${bundle.symbolicName} [${bundle.namespace}]</name>
 	<packaging>bundle</packaging>
 	<dependencies>
         <dependency>
@@ -137,13 +136,13 @@
 			<plugin>
 				<groupId>org.ops4j</groupId>
 				<artifactId>maven-pax-plugin</artifactId>
-				<version>1.4</version>
+				<version>${maven-pax-plugin.version}</version>
 				<extensions>true</extensions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>1.4.3</version>
+				<version>${maven-bundle-plugin.version}</version>
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
