--- a/core3/filter-impl/trunk/pom.xml
+++ b/core3/filter-impl/trunk/pom.xml
@@ -95,6 +95,11 @@
 			<artifactId>swing-util</artifactId>
 			<version>3.0.0-alpha1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>service-util</artifactId>
+			<version>3.0.0-alpha1</version>
+		</dependency>
 	</dependencies>
 	
 	<repositories>
