Renamed TableBrowser to TableBrowserImpl so we don't have to fully qualify any class/interface names Changed table-browser-impl so it implements table-browser-api
git-svn-id: http://chianti.ucsd.edu/svn@24841 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/table-browser-impl/trunk/pom.xml
+++ b/core3/table-browser-impl/trunk/pom.xml
@@ -157,5 +157,10 @@
 			<artifactId>work-swing-api</artifactId>
 			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>table-browser-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
