Added actions for exporting node and edge attributes Removed dependencies on table-browser-api Renamed TableBrowserImpl back to TableBrowser
git-svn-id: http://chianti.ucsd.edu/svn@24858 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/table-browser-impl/trunk/pom.xml
+++ b/core3/table-browser-impl/trunk/pom.xml
@@ -159,8 +159,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>table-browser-api</artifactId>
-			<version>3.0.0-alpha2-SNAPSHOT</version>
+			<artifactId>session-api</artifactId>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
