Fixed build breakage due to rename of CyLayouts to CyLayoutAlgorithmManager
git-svn-id: http://chianti.ucsd.edu/svn@24886 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/plugin-impl/trunk/pom.xml
+++ b/core3/plugin-impl/trunk/pom.xml
@@ -128,7 +128,7 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>plugin-api</artifactId>
-      <version>3.0.0-alpha2</version>
+      <version>3.0.0-alpha3-SNAPSHOT</version>
     </dependency>
     
     <!-- dependencies needed for plugin manager -->
@@ -195,7 +195,7 @@
     <dependency>
 		<groupId>org.cytoscape</groupId>
 		<artifactId>plugin-api</artifactId>
-		<version>3.0.0-alpha2</version>
+		<version>3.0.0-alpha3-SNAPSHOT</version>
 		<type>test-jar</type>
 		<scope>test</scope>
 	</dependency>
