--- a/core3/viewmodel-impl/trunk/pom.xml
+++ b/core3/viewmodel-impl/trunk/pom.xml
@@ -100,6 +100,7 @@
 			<groupId>org.cytoscape</groupId>
 			<artifactId>property-api</artifactId>
 			<version>3.0.0-alpha4-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
