--- a/core3/test-support/trunk/pom.xml
+++ b/core3/test-support/trunk/pom.xml
@@ -80,7 +80,7 @@
 	  <dependency>
 	    <groupId>org.cytoscape</groupId>
 	    <artifactId>viewmodel-api</artifactId>
-	    <version>3.0.0-alpha3</version>
+	    <version>3.0.0-alpha4-SNAPSHOT</version>
 	  </dependency>
 	  <dependency>
 	    <groupId>org.cytoscape</groupId>
@@ -96,7 +96,7 @@
 	  <dependency>
 	    <groupId>org.cytoscape</groupId>
 	    <artifactId>viewmodel-impl</artifactId>
-	    <version>3.0.0-alpha2</version>
+	    <version>3.0.0-alpha3-SNAPSHOT</version>
 	  </dependency>
 	  
 	  <dependency>
