--- a/core3/test-support/trunk/pom.xml
+++ b/core3/test-support/trunk/pom.xml
@@ -87,6 +87,11 @@
 	    <artifactId>service-util</artifactId>
 	    <version>3.0.0-alpha1</version>
 	  </dependency>
+	  <dependency>
+	    <groupId>org.cytoscape</groupId>
+	    <artifactId>property-api</artifactId>
+	    <version>3.0.0-alpha4-SNAPSHOT</version>
+	  </dependency>
 	  <!-- implementations of the APIs - these can change as things evolve -->
 	  <dependency>
 	    <groupId>org.cytoscape</groupId>
