--- a/core3/plugin-impl/trunk/pom.xml
+++ b/core3/plugin-impl/trunk/pom.xml
@@ -159,7 +159,7 @@
 	<dependency>
     	<groupId>org.cytoscape</groupId>
     	<artifactId>swing-application-api</artifactId>
-    	<version>3.0.0-alpha1</version>
+    	<version>3.0.0-alpha2-SNAPSHOT</version>
 	</dependency>
 
 	<dependency>
