--- a/csplugins/trunk/ucsd/mes/genomespace-plugin/pom.xml
+++ b/csplugins/trunk/ucsd/mes/genomespace-plugin/pom.xml
@@ -66,19 +66,19 @@
       <version>1.5-ea09</version>
     </dependency>
     <dependency>
-      <groupId>cytoscape-temp</groupId>
-      <artifactId>genomespace-cdk</artifactId>
-      <version>1.0-beta2</version>
+      <groupId>org.genomespace</groupId>
+      <artifactId>clientdevelopmentkit</artifactId>
+      <version>0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>cytoscape-temp</groupId>
-      <artifactId>dm-messages</artifactId>
-      <version>1.0-beta2</version>
+      <groupId>org.genomespace</groupId>
+      <artifactId>analysistoolmgmt-messages</artifactId>
+      <version>0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>cytoscape-temp</groupId>
-      <artifactId>atm-messages</artifactId>
-      <version>1.0-beta2</version>
+      <groupId>org.genomespace</groupId>
+      <artifactId>datamanager-messages</artifactId>
+      <version>0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
