Add a new property -- showQuickStartAtStartup
git-svn-id: http://chianti.ucsd.edu/svn@24961 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/property-impl/trunk/src/main/resources/cytoscape.props
+++ b/core3/property-impl/trunk/src/main/resources/cytoscape.props
@@ -20,3 +20,4 @@ exportTextAsShape=true
 vizmapper.cntMapperUpperLimit=2000
 undo.limit=10
 defaultPluginDownloadUrl=http://cytoscape.org/plugins/plugins.xml
+showQuickStartAtStartup= false
