Old dependencies had been updated.
git-svn-id: http://chianti.ucsd.edu/svn@24967 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/work-swing-impl/trunk/pom.xml
+++ b/core3/work-swing-impl/trunk/pom.xml
@@ -75,7 +75,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>work-api</artifactId>
-			<version>3.0.0-alpha2</version>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -87,7 +87,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>work-spring-hack</artifactId>
-			<version>3.0.0-alpha1</version>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -105,7 +105,7 @@
  		<dependency>
  			<groupId>org.cytoscape</groupId>
 			<artifactId>model-api</artifactId>
-			<version>3.0.0-alpha1</version>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
  			<scope>provided</scope>
  		</dependency>
  		<dependency>
